# MeanSquareDisplacement

./: .buildinfo  CMakeLists.txt  LICENSE.txt  Makefile  README.md  environment.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml  conda.yml
_sources/: index.rst.txt
devtools/conda-build/: build.sh  conda_build_config.yaml  meta.yaml
docs/: Doxyfile  requirements.txt
docs/source/: conf.py  index.rst
mean_square_displacement/: CMakeLists.txt
mean_square_displacement/include/: autocorr_cuda.cuh  common.hpp  cufftPrecisionAgnostic.h  debugTools.cuh  fftwPrecisionAgnostic.h  gitversion.h.in  kahan.hpp  msd.hpp
mean_square_displacement/include/msd/: autocorr.hpp  autocorr_cpu.hpp  cufftDebug.h  defines.h  gitversion.h  kahan.h
mean_square_displacement/python/mean_square_displacement/: __init__.py  wrapper.cpp
mean_square_displacement/src/: MeanSquareDisplacement.cpp  autocorr.cpp  autocorr_cpu.cpp  autocorr_cuda.cu  msd.cpp
src/: CMakeLists.txt  Makefile  MeanSquareDisplacement.cpp  MeanSquareDisplacement.cu  autocorrCPU.h  autocorrGPU.cuh  common.h  correlationGPU.cuh  cufftDebug.h  cufftPrecisionAgnostic.h  debugTools.cuh  defines.h.in  fftwPrecisionAgnostic.h  superIO.h  superRead.h
tests/: CMakeLists.txt  test_msd.cpp  test_msd.py
